@@ -2,6 +2,7 @@
 v6.0.3-git
 ----------
 
+[mms] Improved parsing of References header when replying to a message.
 [mms] Fix verifying an enveloped signed & encrypted S/MIME message (Bug
       #11874).
 [mms] Fix converting charset of signature/trailer in compose message if not
